# GymBro

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  seedAllUsers.js
backend/: ecosystem.config.js  package-lock.json  package.json  test-client.js  test-gemini.js  tsconfig.build.json  tsconfig.json
backend/scripts/: copyClient.js
backend/src/: server.js  server.ts
backend/tests/: achievementUnlock.model.test.ts  achievements.service.test.ts  auth.middleware.test.ts  auth.test.ts  bodyMeasurement.model.test.ts  bodyMeasurements.service.test.ts  calendarMetrics.test.ts  coach.controller.test.ts  coach.service.test.ts  coachProgress.service.test.ts  exerciseKey.test.ts  poseAnalysis.service.test.ts  progress.service.test.ts  progressGoal.model.test.ts  progressGoals.service.test.ts  sessions.service.test.ts  users.service.test.ts  validation.test.ts  videoController.test.ts  workoutPlan.service.test.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.jsx  App.tsx  main.tsx
frontend/ui-kit/: package.json  (+1 more)
knowledge-base/: training-knowledge.json
pose-estimation-service/: .gitignore  ecosystem.config.js  pyproject.toml
pose-estimation-service/src/: coaching_skill.md  llm_client.py  main.py  models.py  overlay_renderer.py  pose_detector.py  post_processor.py  video_processor.py
pose-estimation-service/src/exercises/: __init__.py  base.py  bench_press.py  bicep_curl.py  deadlift.py  lat_pulldown.py  lateral_raise.py  lunge.py  pushup.py  shoulder_press.py  squat.py  triceps_extension.py
(+192 files in other folders)
