[project]
name = "mediapipenewversion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "mediapipe>=0.10.32",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "imageio-ffmpeg>=0.5.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.9",
]
